--- a/1.css
+++ b/1.css
@@ -15,4 +15,18 @@ height: 560px;
 .nav-item{
 	text-transform: uppercase;
 	font-size: 18px;
-}s
+}
+.dropdown-menu{
+	left:-85px;
+}
+.recentpost{
+	display: inline-flex;
+	width: 300px;
+	height: 60px;
+	float: left;
+}
+.recentpost img {
+	border-radius: 90px;
+	width: 60px;
+	height: 60px;
+}
