--- a/1.css
+++ b/1.css
@@ -1,32 +1,7 @@
 *{margin: 0; padding: 0;} 
 body{
-	font-family: segoe ui;
-	position: relative; 
+	font-family: "segoe ui";
 }
 h1{
 	text-align: center;
-}#collapsibleNavbar{
-	float: right;
-}
-.carousel-item img{
-width: 1280px;
-height: 560px;
-}
-.nav-item{
-	text-transform: uppercase;
-	font-size: 18px;
-}
-.dropdown-menu{
-	left:-85px;
-}
-.recentpost{
-	display: inline-flex;
-	width: 300px;
-	height: 60px;
-	float: left;
-}
-.recentpost img {
-	border-radius: 90px;
-	width: 60px;
-	height: 60px;
 }
